test/libsolidity/syntaxTests/experimental/parsing_stdlib_import_without_pragma_1.sol
import std.stub;
// ----
// ParserError 9478: (7-10): Expected string literal (path), "*" or alias list.
